- Fixed bug causing echest changes to not save (#181) 
- Fixed bug causing teams to disband incorrectly (#178 #190 #182 #187 #176 #177)
- Fixed bug causing /teama reload to crash the plugin (#189)
- Fixed bug with team names with the symbol `:` in (#185)

4.0.3:

Bug Fixes: 
- Fixed bug causing the config to not reload with /teama reload (#202)
- Fixed bug causing teams to break when they change their name (#204 #199 #193)
- Fixed bug causing teams to be unloaded while players are still online (#205)

Development Changes: 
- Replaced the selection sign with an escape code (#196)

4.0.4: 

Bug Fixes: 
- Removed Team echest duplication bug (#207 #204)

4.0.5:

Features: 
- Added a description to /team rank (#215)

Improvements: 
- Added worldgaurd version checking (#173)
- Stores individual team preference to /team pvp across reloads (#203)

Bug Fixes: 
- Fixed bug with /team ban <player> for offline players (#217)
- Fixed bug with worldguard and /teama reload (#173)

4.1.0: 

Features: 
- Added Mexican Spanish translations (es_mx) (#222)
- Added the ability to limit the number of admins and owners per team (#156)
- Added the option to call commands when a player is promoted / demoted (#155) 

Improvements: 
- Fixed a typo in messages.yml

Bug Fixes:

- Fixed a bug causing /team title to not work (#221)

4.1.1: 

Features: 
- Added 8 new placeholders (https://github.com/booksaw/BetterTeams/wiki/PlaceholderAPI) (#227)
- Added an option to make teamLimit permisison based

Improvements: 
- Added some missing Mexican Spanish translations (#229)
- Added a minScore option to the config (#231)

Bug Fixes: 
- Fixed bug with OfflinePlayer name being null (#230)
- Fixed bug which caused potions to not damage players when they should (#226)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
