@@ -62,7 +62,7 @@ public class TeamPlaceholders extends PlaceholderExpansion {
 				return MessageManager.getMessage("placeholder.noTeam");
 			}
 
-			return String.format(MessageManager.getMessage(player, "placeholder.name").trim(), team.getName());
+			return String.format(MessageManager.getMessage(player, "placeholder.name"), team.getName());
 		} else if (identifier.equals("tag")) {
 			Team team = Team.getTeam(player);
 
@@ -70,7 +70,7 @@ public class TeamPlaceholders extends PlaceholderExpansion {
 				return MessageManager.getMessage("placeholder.noTeam");
 			}
 
-			return String.format(MessageManager.getMessage(player, "placeholder.tag").trim(), team.getTag());
+			return String.format(MessageManager.getMessage(player, "placeholder.tag"), team.getTag());
 		} else if (identifier.equals("displayname")) {
 			Team team = Team.getTeam(player);
 
@@ -78,7 +78,7 @@ public class TeamPlaceholders extends PlaceholderExpansion {
 				return MessageManager.getMessage("placeholder.noTeam");
 			}
 
-			return String.format(MessageManager.getMessage(player, "placeholder.displayname").trim(),
+			return String.format(MessageManager.getMessage(player, "placeholder.displayname"),
 					team.getColor() + team.getTag());
 
 		} else if (identifier.equals("description")) {
@@ -110,7 +110,7 @@ public class TeamPlaceholders extends PlaceholderExpansion {
 				return MessageManager.getMessage("placeholder.noTeam");
 			}
 
-			return String.format(MessageManager.getMessage(player, "placeholder.money").trim(), team.getBalance() + "");
+			return String.format(MessageManager.getMessage(player, "placeholder.money"), team.getBalance() + "");
 		} else if (identifier.equals("score")) {
 
 			Team team = Team.getTeam(player);
